config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-demo-1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo-1
