config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: secret-demo
    hosts:
    - app.michard.io
  rules:
  - host: app.michard.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-demo-1
            port:
              number: 80
